# SALTshaker

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/saltshaker/: __init__.py  constraints.py  salt_observer.py
tests/: test_placeholder.py
