[project]
name = "saltshaker"
version = "0.1.0"
description = "A python package for planning astronomical observations with the South African Large Telescope."
authors = [
    {name = "Enzo Peres Afonso",email = "enzo.p.afonso@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "saltshaker", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.14.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.datasets]
track_tables = ["src/saltshaker/data/*.dat"]
