[project]
name = "saltshaker"
version = "0.1.0"
description = "A python package for planning astronomical observations with the South African Large Telescope."
authors = [
    {name = "Enzo Peres Afonso",email = "enzo.p.afonso@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=6.1.1",
    "scipy>=1.14.0",
    "numpy>=1.26.4",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "astroplan (>=0.10.1,<0.11.0)"
]

[tool.poetry]
packages = [{include = "saltshaker", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.14.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

